Updated the README

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,11 +8,6 @@ output:
 always_allow_html: true
 ---
 
-<style type="text/css">
-  p,ul,li{
-  font-size: 12pt;
-}
-</style>
 
 ```{r setup, include=FALSE}
 library(htmltools)
@@ -34,9 +29,9 @@ county_ts <- readRDS("data/county_ts.rds")
 
 ## Overview  
 
-This project applies classical time series analysis to Sweden infant mortality rates.  The data set used comes from the one in [Bayesian Demographic Estimation and Forecasting](https://www.taylorfrancis.com/chapters/mono/10.1201/9780429452987-11/infant-mortality-sweden-john-bryant-junni-zhang).
+This project applies classical time series analysis to Sweden infant mortality rates.  The data set under anlysis comes from the one in [Bayesian Demographic Estimation and Forecasting](https://www.taylorfrancis.com/chapters/mono/10.1201/9780429452987-11/infant-mortality-sweden-john-bryant-junni-zhang).
 
-The analysis framework is based on the one presented in:
+This project's analysis framework is based on the one presented in:
 [Forecasting: Principles and Practice](https://otexts.com/fpp3/arima-r.html).
 
 
