added more structure to the README

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,9 @@ county_ts <- readRDS("data/county_ts.rds")
 
 ## Overview  
 
-This project applies classical time series analysis to Sweden infant mortality rates.  The dataset under analysis comes from a problem presnted in [Bayesian Demographic Estimation and Forecasting](https://www.taylorfrancis.com/chapters/mono/10.1201/9780429452987-11/infant-mortality-sweden-john-bryant-junni-zhang). The data can be found in the `bdefdata`package located here: [https://github.com/johnrbryant/bdefdata/](https://github.com/johnrbryant/bdefdata/).  The package contains infant birth and death data for multiple counties in Sweden.  Currently, analysis has only been performed on the largest county, Stockholm.  
+This project applies classical time series analysis to Sweden infant mortality rates.  The dataset under analysis comes from a problem presnted in [Bayesian Demographic Estimation and Forecasting](https://www.taylorfrancis.com/chapters/mono/10.1201/9780429452987-11/infant-mortality-sweden-john-bryant-junni-zhang). The data can be found in the `bdefdata` package located here: [https://github.com/johnrbryant/bdefdata/](https://github.com/johnrbryant/bdefdata/).  The package contains infant birth and death data for multiple counties in Sweden.  
+
+Currently, analysis has only been performed on the largest county, Stockholm.  
 
 This project's analysis framework is based on the one presented in:
 [Forecasting: Principles and Practice](https://otexts.com/fpp3/arima-r.html).
@@ -44,7 +46,7 @@ This project's analysis framework is based on the one presented in:
 
 cat('\n') 
 cat("### Observed data  \n")
-print(res_plots$stockholm_raw)
+print(res_plots$stockholm_raw_gg)
 cat('\n') 
 
 # cat("### ACF  \n")
@@ -70,9 +72,15 @@ cat('\n')
 
 ## Transformations {.tabset .tabset-pills}
 
-The data is visually assessed to see if transformation or differencing is required.  Additionally a KPSS test is performed in which the null hypothesis is that the data is stationary (small p-value -> differencing is requried).
+The data is visually assessed to see if transformation or differencing is required.  Additionally a KPSS test is performed for which the null hypothesis: the data is stationary (small p-value -> differencing is requried).
 
-Logging the data appears to do little in altering the shape of the data.  Differencing appears to make the data more stationary.    Also KPSS p-value of the orignal series is reported as .01 which indicates to reject the null.  The KPSS p-value for the diffed series is reported as 0.1.  Therefore diffed data will be used for model selection. 
+Logging the data appears to do little in altering the shape of the data.  Differencing appears to make the data more stationary.    This is supported by KPSS tests. p-value for test performed on:   
+
+
+* the orignal series:  .01 --> reject the null
+* the first-differenced series  0.1 --> fail to reject the null
+
+Therefore first-differenced data will be used for model selection.  
 
 ### actual-data
 
@@ -131,16 +139,23 @@ county_model <- county_ts  %>% model(
   )
 ```
 
-The ACF appears to be significant at lag 1 and then cut off.  The PACF appears to show geometric decay.  I will choose an MA(1) model for the diffed series or ARIMA(0,1,1) on the original (ie the airline model). The automatic model was performed using the stepwise [Hyndman-Khandakar algorithm](https://otexts.com/fpp3/arima-r.html).  The algorithm chose an ARIMA(2,1,0) Which I would have never chosen by looking at the ACF and PACF.
+Two models are considered:  
 
+* A manually selected one based on assesing the ACF/ and PACF plots.
+* An automatic selected using the [Hyndman-Khandakar algorithm](https://otexts.com/fpp3/arima-r.html) (step-wise and full grid search yield the same result)
 
-Summary of manual model and automatic model:
+Summary of results:
 ```{r, results = "hold"}
 glance(county_model)
 ```
 
 
+
+
+
 ### Manual
+
+Observing the plots for the first-differenced series, The ACF appears to be significant at lag 1 and then cuts off.  The PACF appears to show geometric decay.  Therefore an MA(1) model for the first-differenced series is chosen which is equivalent to an ARIMA(0,1,1) model for the original series (ie the airline model).  
 
 ```{r, results = "hold"}
 
@@ -163,10 +178,17 @@ county_model %>% select(stepwise) %>% gg_tsresiduals()
 
 ```
 
+### Model quality
+
+Both models are plausible and have acceptable residual diagnostics.  
 
 ## {-}
 
 ## Forecast {.tabset .tabset-pills}
+
+The Manual model is only modelling innovations because it's an MA(1), and so the estimate for each forecast step is the same.  On the otherhand, the automatic model is an AR(2) model and so the estimate for each forecast step will depend on the observed/estimated value at t-1 and t.  
+
+
 ### Manual
 
 ```{r, results = "hold"}
@@ -185,5 +207,19 @@ county_model %>%
 
 ## {-}
 
+
+## Conclusions
+
+The goal of this analysis was primarily to explore and not necessarily to develop the best forecasting model.  
+
+The original problem is multivariate with time series data for 21 Swedish counties.  The Bayesian book models time effects and region efects explicitly, infers the underlying mortality rate and forecasts the rates by county.
+
+Next steps for this analysis:  
+
+* Attempt to replicate and gain a deeper understanding of Bryant's Bayesian model
+* Apply modern ML techniques to generate forecasts by region (with one or more regions as inputs)
+* Compare forecasts generated from ARIMA, Bayesian, and ML models
+
+*Note: see [gp-sweden-infant-mortality](https://github.com/stevemichaelwhite/gp-sweden-infant-mortality) which models and forecasts the same dataset with a Gaussian Proccess.*
 
 
